[workspace]
members = [".", "relay"]

[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "A simple networking layer for Stahl IPC."
edition = "2018"
name = "stahlnet"
version = "0.1.0"

[dependencies]
bytes = "0.4.12"
derive_more = "0.15.0"
futures = "0.1.27"
libremexre = { features = ["futures", "log"], version = "0.1.12" }
log = "0.4.6"
rand = "0.6.5"
tokio = "0.1.21"
tokio-timer = "0.2.11"

[dev-dependencies]
pretty_assertions = "0.6.1"
