[workspace]
members = [".", "relay"]

[package]
authors = ["Nathan Ringo <nathan@remexre.xyz>"]
description = "A Rust implementation of StahlOS's network transport for IPC."
documentation = "https://remexre.xyz/stahlnet-rs/"
edition = "2018"
homepage = "https://github.com/remexre/stahlnet-rs"
license = "Apache-2.0/MIT"
name = "stahlnet"
repository = "https://github.com/remexre/stahlnet-rs"
version = "0.1.1"

[dependencies]
bytes = "0.4.12"
derive_more = "0.15.0"
futures = "0.1.27"
libremexre = { features = ["futures", "log"], version = "0.1.12" }
log = "0.4.6"
rand = "0.6.5"
tokio = "0.1.21"
tokio-timer = "0.2.11"

[dev-dependencies]
pretty_assertions = "0.6.1"
