[package]
authors = ["Nathan Ringo <nathan@remexre.xyz>"]
description = "A relay for StahlNet, written in Rust."
documentation = "https://remexre.xyz/stahlnet-rs/"
edition = "2018"
homepage = "https://github.com/remexre/stahlnet-rs"
license = "Apache-2.0/MIT"
name = "stahlnet-relay"
repository = "https://github.com/remexre/stahlnet-rs"
version = "0.1.2"

[dependencies]
libnotify = { version = "1.0.3", optional = true }
libremexre = { features = ["log", "pretty_env_logger"], version = "0.1.12" }
log = "0.4.6"
stahlnet = { path = ".." }
structopt = "0.2.16"
tokio = "0.1.21"
tokio-signal = "0.2.7"

[features]
default = ["libnotify"]
nogui = []
